Prevent overflow or URLs in new tab page.

--- a/tab_page/css/style.css
+++ b/tab_page/css/style.css
@@ -130,6 +130,11 @@ html, body {
 	position: absolute;
 
 	width: 100%;
+	padding: 0 10px;
+	box-sizing: border-box;
+
+	overflow: hidden;
+	text-overflow: ellipsis;
 
 	text-align: center;
 
